deploy/portainer/templates/custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: portainer
  namespace: portainer
spec:
  rules:
  - host: portainer.nuc.local
    http:
      paths:
      - backend:
          service:
            name: portainer
            port:
              number: 9000
        path: /
        pathType: ImplementationSpecific
